libs/@local/hashql/hir/tests/ui/lower/specialization/unary.jsonc
//@ run: fail
//@ description: unary operations are not implemented yet
["!", { "#literal": true }]
//~^ ERROR intrinsic `::core::bool::not` not supported yet
